--- a/ReactNativeRealm/package.json
+++ b/ReactNativeRealm/package.json
@@ -10,7 +10,7 @@
     "native-base": "^2.3.10",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "realm": "^2.3.0"
+    "realm": "2.2.15"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
